--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,39 @@
 body {
     font-family: 'Montserrat', sans-serif;
 }
+nav {
+    font-weight: 300;
+}
+.nav-link {
+    border-bottom: solid 1px transparent;
+}
+.nav-link:hover {
+    border-bottom: solid 1px #d9a566;
+}
 .bg-blue-ss {
     background-color: #464d73;
+}
+.title-carousel {
+    color:  #43d9ae;
+    font-size: 3rem;
+    font-weight: 700;
+}
+.carousel-caption {
+    bottom: 0%;
+}
+.foto {
+    width: 200px;
+    z-index: 1;
+    position: absolute;
+    margin-top: -150px;
+}
+.estracto {
+    font-size: 1.25rem;
+}
+.linea-primaria {
+    border-bottom: solid 2px #000;
+    width: 150px;
+}
+.font-700 {
+    font-weight: 700;
 }
