--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,11 @@ nav {
     font-size: 3rem;
     font-weight: 300;
 }
+.title-carousel-2 {
+    color:  #464d73;
+    font-size: 3rem;
+    font-weight: 300;
+}
 .carousel-caption {
     bottom: 0%;
 }
@@ -87,6 +92,6 @@ nav {
     width: 50px;
     position: fixed;
     bottom: 50px;
-    right: 50px;
+    right: 20px;
     z-index: 9;
 }
